<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_notifications"
        android:title="@string/notifications_title"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/menu_edit"
        android:title="@string/sua_title"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/xoa_title"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"/>

</menu>