<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignUpActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_max"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="gone"
            android:maxHeight="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/loginquest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="Bạn đã có tài khoản ?"
                android:layout_marginLeft="100dp"
                android:layout_toRightOf="@+id/taotaikhoan"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/taotaikhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:text="@string/sign_up_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#1e1e1e"/>



        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_marginTop="0dp"
            android:text="@string/create_account_title"
            android:textColor="@color/colorBlack" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/fname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:hint="@string/first_name_prompt">

            </EditText>




    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/lname_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:hint="@string/last_name_prompt">

            </EditText>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:hint="@string/email_address_prompt">

            </EditText>




    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/user_id_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:hint="@string/id_number_prompt">

            </EditText>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:hint="@string/phone_number_prompt">

            </EditText>




    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/user_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:hint="@string/password_prompt">

            </EditText>



    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardBackgroundColor="#E6E6E6">



            <EditText
                android:paddingLeft="10dp"
                android:id="@+id/confirm_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="#80000000"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:hint="@string/confirm_password_prompt">

            </EditText>



    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/sign_up_button"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_max"
        android:textSize="20dp"

        android:text="@string/sign_up_title"/>


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Bằng cách nhấn vào tạo tài khoản, tôi đồng ý với điều khoản đăng ký và sử dụng."
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</ScrollView>