<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logofpt" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="gone"
            android:maxHeight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#1e1e1e"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_max"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:backgroundTint="#E6E6E6">



                <EditText
                    android:paddingLeft="10dp"
                    android:id="@+id/emailAddress_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#80000000"
                    android:textColor="@color/black"
                    android:hint="Email">

                </EditText>


        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_max"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:backgroundTint="#E6E6E6">
                <EditText
                    android:paddingLeft="10dp"
                    android:id="@+id/password_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="#80000000"
                    android:hint="Password"
                    android:textColor="@color/black">

                </EditText>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/card_view_corner_radius">
            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColor="@color/colorWhite"
                android:background="@drawable/circular_button_shape"
                android:text="Đăng nhập"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quenmatkhau"
            android:text="@string/forgot_password_title"
            android:textColor="#1e1e1e"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/signup_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_link"
        android:focusable="true"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:layout_alignParentBottom="true"
        android:background="?selectableItemBackground"/>



</RelativeLayout>